move bulk status update to command
